cmake_minimum_required(VERSION 3.20)

project(my_second_cmake_project)

add_executable(my_second_cmake_program     
    "Class_Hierarchy.cpp"
    "Figure.cpp"
    "Triangle.cpp"
    "Right_triangle.cpp"
    "Isosceles_triangle.cpp"
    "Equilateral_triangle.cpp"
    "Quadrangle.cpp"
    "Rectangle.cpp"
    "Square.cpp"
    "Parallelogram.cpp"
    "Rhombus.cpp"
)